--- a/freenoteReactNativeClient/package.json
+++ b/freenoteReactNativeClient/package.json
@@ -11,12 +11,17 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.11",
+    "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "formik": "^2.2.9",
+    "jwt-decode": "^3.1.2",
+    "prop-types": "^15.7.2",
     "react": "17.0.2",
     "react-native": "0.66.3",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.9.0",
+    "react-native-vector-icons": "^9.0.0",
     "react-query": "^3.33.1",
     "styled-components": "^5.3.3",
     "styled-system": "^5.1.5",
@@ -29,6 +34,7 @@
     "@types/styled-components-react-native": "^5.1.3",
     "babel-jest": "^26.6.3",
     "eslint": "7.14.0",
+    "eslint-plugin-react": "^7.27.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.66.2",
     "react-test-renderer": "17.0.2"
